# gemma_tensor_mtp

./: .gitignore  pyproject.toml  run_e0.py  run_e1.py  run_g1.py
configs/: e0_baseline.yaml  e1_topk_sweep.yaml  g1_factorisation.yaml
gmtp/: backbone.py  clusters.py  data.py  gemma_io.py  recall.py  sweep.py  timing.py  train_head.py  utils.py
gmtp/heads/: __init__.py  base.py  cp.py  ff.py
