[project]
name = "gemma-mtp"
version = "0.1.0"
description = "E0: instrumented baseline for Gemma 4 MTP drafter — cluster recall + end-to-end timing."
requires-python = ">=3.10,<3.13"
dependencies = [
    "torch>=2.4",
    "transformers @ git+https://github.com/huggingface/transformers.git",
    "triton<=3.1.0",
    "einops>=0.8",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "tensorboard>=2.16",
    "datasets>=2.14",
    "accelerate>=0.30",
    "tqdm>=4.64",
    "peft>=0.9",
    "torch>=2.4",
    "accelerate",
    "datasets",
    "huggingface-hub",
    "tensorboard",
    "matplotlib",
    "numpy",
    "tqdm",
    "rich",
    "loguru",
    "pyyaml",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["gmtp*"]
